# ink-rs

./: .gitignore  Cargo.toml  README.md
crates/ink-cli-protocol/: Cargo.toml
crates/ink-cli-protocol/src/: lib.rs
crates/ink-compiler/: Cargo.toml
crates/ink-compiler/src/: lib.rs
crates/ink-diff-harness/: Cargo.toml
crates/ink-diff-harness/src/: main.rs
crates/ink-json/: Cargo.toml
crates/ink-json/src/: lib.rs
crates/ink-model/: Cargo.toml
crates/ink-model/src/: lib.rs
crates/ink-runtime/: Cargo.toml
crates/ink-runtime/src/: lib.rs
crates/inklecate-rs/: Cargo.toml
crates/inklecate-rs/src/: main.rs
docs/: migration-playbook.md
tmp/: test.ink.json
