[workspace]
members = [
  "crates/ink-model",
  "crates/ink-json",
  "crates/ink-runtime",
  "crates/ink-compiler",
  "crates/ink-cli-protocol",
  "crates/inklecate-rs",
  "crates/ink-diff-harness",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
