[package]
name = "ink-diff-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ink-compiler = { path = "../ink-compiler" }
ink-json = { path = "../ink-json" }
ink-runtime = { path = "../ink-runtime" }
serde_json.workspace = true
tempfile.workspace = true
